ironclad/build/.ironclad_debug/validate_convert_to_dict_by_id_attempt2.txt
Phase: validate
Component: convert_to_dict_by_id
Attempt: 2
Message: Validation failed

RAW DATA:
============================= test session starts ==============================
platform linux -- Python 3.12.3, pytest-9.0.2, pluggy-1.6.0
rootdir: /mnt/storage/tmp/tmpb8591z1g
plugins: anyio-4.12.0, cov-7.0.0, mock-3.15.1
collected 0 items / 1 error

==================================== ERRORS ====================================
________________ ERROR collecting test_convert_to_dict_by_id.py ________________
../../python_env/devtools/lib/python3.12/site-packages/_pytest/python.py:507: in importtestmodule
    mod = import_path(
../../python_env/devtools/lib/python3.12/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/usr/lib/python3.12/importlib/__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
../../python_env/devtools/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
../../python_env/devtools/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/usr/lib/python3.12/ast.py:52: in parse
    return compile(source, filename, mode, flags,
E     File "/mnt/storage/tmp/tmpb8591z1g/test_convert_to_dict_by_id.py", line 20
E       assert result[1]=={'id':1,'value':20'}
E                                           ^
E   SyntaxError: unterminated string literal (detected at line 20)
=========================== short test summary info ============================
ERROR test_convert_to_dict_by_id.py
!!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
=============================== 1 error in 0.09s ===============================
